--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.1|^8.2|^8.3|^8.4",
+       "php": "^8.3",
+        "ext-exif": "*",
+        "ext-gd": "*",
         "google/apiclient": "^2.18",
         "http-interop/http-factory-guzzle": "^1.2",
         "intervention/image": "^3.11",
