--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.3",
         "ext-exif": "*",
         "ext-gd": "*",
+        "ext-pdo_mysql": "*",
         "google/apiclient": "^2.18",
         "http-interop/http-factory-guzzle": "^1.2",
         "intervention/image": "^3.11",
